--- a/create-quiz.html
+++ b/create-quiz.html
@@ -81,6 +81,12 @@
                             <label for="total-questions">Total Questions to Generate</label>
                             <input type="number" id="total-questions" placeholder="e.g., 10" min="1" max="50" required>
                         </div>
+                        <!-- ...existing code... -->
+                        <div class="form-group">
+                            <label for="total-time">Total Time for Users (minutes)</label>
+                            <input type="number" id="total-time" placeholder="e.g., 30" min="1" max="300" required>
+                        </div>
+                        <!-- ...existing code... -->
                     </div>
                 </div>
 
